intel/bench_214_new/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main/log.txt
bench_214_new/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main.c:34:24: error: use of undeclared identifier 'NULL'
        struct bna_rcb *rcb = NULL;
                              ^
bench_214_new/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main/extr_.linuxdriversnetethernetbrocadebnabnad_ethtool.c_bnad_per_q_stats_fill_with_main.c:35:24: error: use of undeclared identifier 'NULL'
        struct bna_tcb *tcb = NULL;
                              ^
2 errors generated.
HLS FPGA Parse FAILED.
